; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_remote.c_git_remote_list.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_remote.c_git_remote_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8**, i32 }

@GIT_VECTOR_INIT = common dso_local global i32 0, align 4
@git__strcmp_cb = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"^remote\\..*\\.(push)?url$\00", align 1
@remote_list_cb = common dso_local global i32 0, align 4
@git__free = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_remote_list(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load i32, i32* @GIT_VECTOR_INIT, align 4
  store i32 %9, i32* %8, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @git_repository_config__weakptr(i32** %7, i32* %10)
  store i32 %11, i32* %6, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* %6, align 4
  store i32 %14, i32* %3, align 4
  br label %39

15:                                               ; preds = %2
  %16 = load i32, i32* @git__strcmp_cb, align 4
  %17 = call i32 @git_vector_init(i32* %8, i32 4, i32 %16)
  store i32 %17, i32* %6, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %15
  %20 = load i32, i32* %6, align 4
  store i32 %20, i32* %3, align 4
  br label %39

21:                                               ; preds = %15
  %22 = load i32*, i32** %7, align 8
  %23 = load i32, i32* @remote_list_cb, align 4
  %24 = call i32 @git_config_foreach_match(i32* %22, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %23, i32* %8)
  store i32 %24, i32* %6, align 4
  %25 = load i32, i32* %6, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %21
  %28 = call i32 @git_vector_free_deep(i32* %8)
  %29 = load i32, i32* %6, align 4
  store i32 %29, i32* %3, align 4
  br label %39

30:                                               ; preds = %21
  %31 = load i32, i32* @git__free, align 4
  %32 = call i32 @git_vector_uniq(i32* %8, i32 %31)
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 1
  %35 = call i64 @git_vector_detach(i32* %34, i32* null, i32* %8)
  %36 = inttoptr i64 %35 to i8**
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 0
  store i8** %36, i8*** %38, align 8
  store i32 0, i32* %3, align 4
  br label %39

39:                                               ; preds = %30, %27, %19, %13
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @git_repository_config__weakptr(i32**, i32*) #1

declare dso_local i32 @git_vector_init(i32*, i32, i32) #1

declare dso_local i32 @git_config_foreach_match(i32*, i8*, i32, i32*) #1

declare dso_local i32 @git_vector_free_deep(i32*) #1

declare dso_local i32 @git_vector_uniq(i32*, i32) #1

declare dso_local i64 @git_vector_detach(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
